pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-238-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/238-block_quotes.md
---
[36m│[0m [3mfoo[0m[3m - bar[0m
